# audioTransfromTools

./: AudioTransform2.sln  CMakeLists.txt  README.md
AudioTransform2/: AudioBuffer.cpp  AudioTransform2.vcxproj  AudioTransform2.vcxproj.filters  DecodeToPcm.h  G711ToPcm.h  G726ToPcm.h  G7ToPcm.cpp  G7ToPcm.h  Pcm2G7.cpp  Pcm2G7.h  condef.h  g711.h  pcmEncode.cpp
AudioTransformTools/: AudioBuffer.h  CMakeLists.txt  DecodeToPcm.cpp  G711ToPcm.cpp  G726ToPcm.cpp  PcmSerializeApi.cpp  PcmSerializeApi.h  common.h  g711.cpp  g711.h
ReleaseBin/: common.h  pcmEncode.h
resource/: 16k_1_16.pcm  16k_2_16.g711a  16k_2_16.g711u  8k_1_16.g711a
test/: CMakeLists.txt  testAudioDll.cpp
testAudioDll/: testAudioDll.cpp  testAudioDll.vcxproj  testAudioDll.vcxproj.filters
